[package]
name = "kiss"
version = "0.1.0"
authors = ["Shafreeck Sea <shafreeck@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array={path="./array"}
metrohash = "1.0.6"
futures = "0.1.27"
tokio = "0.1"
bytes = "0.4.12"
atoi = "0.3.1"
lazy_static = "1.3.0"