[package]
name = "array"
version = "0.1.0"
authors = ["Shafreeck Sea <shafreeck@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = {version = "0.15.34", features=["full"]}
quote = "0.6.12"
